# Git-Timetraveler

./: .gitignore  Cargo.toml  LICENSE  README.md  git-timetraveler-0.1.1.tgz  install.js  install.sh  package.json  timetravel-1993.md  timetravel-1994.md  timetravel-2000.md  timetravel-2010.md  timetravel-2011.md  timetravel-2012.md
.github/workflows/: release.yml
.kiro/specs/modern-cli-redesign/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
binary/: git-timetraveler
examples/: basic_usage.rs  date_parsing_usage.rs
npm/: README.md  chama-x-git-timetraveler-0.1.12.tgz  chama-x-git-timetraveler-0.1.13.tgz  chama-x-git-timetraveler-0.1.14.tgz  git-timetraveler-0.1.1.tgz  git-timetraveler-0.1.10.tgz  git-timetraveler-0.1.11.tgz  git-timetraveler-0.1.15.tgz  git-timetraveler-0.1.28.tgz  git-timetraveler-0.1.5.tgz  git-timetraveler-0.1.6.tgz  git-timetraveler-0.1.7.tgz  git-timetraveler-0.1.8.tgz  git-timetraveler-0.1.9.tgz  install.js  package.json
npm/binary/: git-timetraveler
package/: install.js  package.json
scripts/: build-binaries.js  build-release.js  create-release.js  pre-publish-check.js  update-version.js
src/: date_parser.rs  defaults.rs  dry_run.rs  errors.rs  git_context.rs  git_operations.rs  github_client.rs  interactive.rs  lib.rs  main.rs  session.rs
tests/: integration_tests.rs
