[package]
name = "git-timetraveler"
version = "0.1.0"
edition = "2021"
description = "Create GitHub repositories with backdated commits to show early years in your profile"
authors = ["chama-x <chama-x@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/chama-x/Git-Timetraveler"
keywords = ["git", "github", "cli", "time-travel", "profile"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "git_timetraveler"
path = "src/lib.rs"

[[bin]]
name = "git-timetraveler"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
