[package]
name = "git-timetraveler"
version = "1.1.1"
edition = "2021"
description = "Create GitHub repositories with backdated commits to show early years in your profile"
authors = ["chama-x <chama-x@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/chama-x/Git-Timetraveler"
keywords = ["git", "github", "cli", "time-travel", "profile"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "git_timetraveler"
path = "src/lib.rs"

[[bin]]
name = "git-timetraveler"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
ctrlc = "3"
atty = "0.2"
git2 = "0.18"
bincode = "1.3"
dirs = "5.0"
regex = "1.10"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
# Optimize for size and performance
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units for better optimization
panic = "abort"     # Reduce binary size by not including unwinding code
strip = true        # Strip symbols from binary
